commit done header and part of navigation

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,40 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+button {
+  padding: 0;
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
+  color: #2f2f2f;
+}
+
+.container {
+  max-width: 1440px;
 }
