--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@ h6,
 p {
   margin: 0;
 }
-
+:root {
+  max-width: 100%;
+}
 p:last-child {
   margin-bottom: 0;
 }
@@ -18,6 +20,7 @@ a {
 }
 
 button {
+  all: unset;
   padding: 0;
   cursor: pointer;
 }
@@ -28,7 +31,7 @@ img {
   height: auto;
 }
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Manrope", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #ffffff;
