--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,5 +1,4 @@
 .container {
-  max-width: 1440px;
   width: 100%;
   height: 100vh;
   margin-left: auto;
@@ -30,18 +29,11 @@
   text-align: center;
   margin-bottom: 40px;
 }
-.btn {
-  border-radius: 12px;
-  color: #ffffff;
-  background-color: #3470ff;
-  padding: 12px 99px;
-  transition: background-color 350ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn:hover,
-.btn:focus {
-  background-color: #0b44cd;
-}
 
 .wrapper {
   transform: translateY(100%);
+}
+.btn {
+  margin-top: 28px;
+  padding: 12px 98px;
 }
