--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,31 @@ h6,
 p {
   margin: 0;
 }
+h3 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 133%;
+}
+h4 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 120%;
+}
 :root {
   width: 100%;
   margin: 0 auto;
 }
 p:last-child {
   margin-bottom: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 125%;
+}
+p {
+  margin-bottom: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 125%;
 }
 
 a {
@@ -60,5 +79,10 @@ select {
 }
 
 input {
+  border: none;
   outline: none;
+}
+textarea {
+  outline: none;
+  border: none;
 }
