--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,6 @@ button {
   border-radius: 12px;
   color: #ffffff;
   background-color: #3470ff;
-  /* padding: 12px 99px; */
   transition: background-color 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 button:hover,
@@ -85,4 +84,5 @@ input {
 textarea {
   outline: none;
   border: none;
+  resize: none;
 }
