--- a/src/pages/CarDetailsPage/CarDetailsPage.module.css
+++ b/src/pages/CarDetailsPage/CarDetailsPage.module.css
@@ -11,7 +11,11 @@
 }
 .carDetails {
   display: flex;
+  gap: 16px;
   margin-bottom: 8px;
+}
+.carDetails h3 {
+  width: 226px;
 }
 .image {
   width: 640px;
@@ -90,4 +94,10 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+.span {
+  width: 260px;
+  font-weight: 500;
+  line-height: 125%;
+  color: #8d929a;
 }
