--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 67px);
   margin-left: auto;
   margin-right: auto;
   display: flex;
