--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -6,3 +6,10 @@
 .active {
   color: #0b44cd;
 }
+.link {
+  transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link:hover,
+.link:focus {
+  color: #0b44cd;
+}
