--- a/src/components/SelectPrice/SelectPrice.module.css
+++ b/src/components/SelectPrice/SelectPrice.module.css
@@ -39,6 +39,7 @@
 }
 
 .selectButton {
+  font-weight: 500;
   width: 170px;
   padding: 12px 16px;
   border-radius: 12px;
@@ -63,7 +64,7 @@
 
 .dropdownList {
   position: absolute;
-  width: 204px;
+  width: 196px;
   margin-top: 5px;
   background: white;
   border: 1px solid #f7f7f7;
